--- a/templates/homepage.css
+++ b/templates/homepage.css
@@ -49,7 +49,7 @@ width: 100vw
     align-self: flex-end;
 }
 #apptitle {
-    color: #719FB0;
+    color: #A0C1B8;
     background-color: #726A95;
     width: fit-content;
     padding: 10px;
@@ -86,6 +86,7 @@ width: 100vw
     align-items: center;
     background-color: #719FB0;
     color:#351F39;
+    box-shadow: 2px -2px #719FB0, -2px -2px #719FB0, 2px 0  #719FB0;
 }
 .cardheader div{
     display: flex;
