--- a/templates/profile.html
+++ b/templates/profile.html
@@ -23,5 +23,99 @@
             </div>
         </div>
         </nav>
-
-</header>
+    </header>
+        <section class="profileheader">
+          <h2>Welcome {{name}}!</h2>
+          <h2>You've made {{posts.length}} Posts:</h2>
+          <h2>Create your first post!</h2>
+        </section>
+        <section id="searchresults" class="carddisplay">
+            <article class="card">
+                <div class="cardheader">
+                    <h4 class="cardtitle">Snippet</h4>
+                        <div>
+                            <p class="carduser">Created by:</p>
+                            <p class="carddate">Date created</p>
+                        </div>
+                </div>
+                <div>
+                    <p class="carddesc">short description of what the code does</p>
+                </div>
+                <div>
+                    <code class="cardsnippet">.row {
+                        display: flex;
+                        flex-direction: row;
+                        flex-wrap: wrap;
+                      }</code>
+                </div>
+                <div>
+                    <p class="cardlang">Language</p>
+                </div>
+            </article>
+            <article class="card">
+                <div class="cardheader">
+                    <h4 class="cardtitle">Snippet</h4>
+                        <div>
+                            <p class="carduser">Created by:</p>
+                            <p class="carddate">Date created</p>
+                        </div>
+                </div>
+                <div>
+                    <p class="carddesc">short description of what the code does</p>
+                </div>
+                <div>
+                    <code class="cardsnippet">.row {
+                        display: flex;
+                        flex-direction: row;
+                        flex-wrap: wrap;
+                      }</code>
+                </div>
+                <div>
+                    <p class="cardlang">Language</p>
+                </div>
+            </article>
+            <article class="card">
+                <div class="cardheader">
+                    <h4 class="cardtitle">Snippet</h4>
+                        <div>
+                            <p class="carduser">Created by:</p>
+                            <p class="carddate">Date created</p>
+                        </div>
+                </div>
+                <div>
+                    <p class="carddesc">short description of what the code does</p>
+                </div>
+                <div>
+                    <code class="cardsnippet">.row {
+                        display: flex;
+                        flex-direction: row;
+                        flex-wrap: wrap;
+                      }</code>
+                </div>
+                <div>
+                    <p class="cardlang">Language</p>
+                </div>
+            </article>
+            <article class="card">
+                <div class="cardheader">
+                    <h4 class="cardtitle">Snippet</h4>
+                        <div>
+                            <p class="carduser">Created by:</p>
+                            <p class="carddate">Date created</p>
+                        </div>
+                </div>
+                <div>
+                    <p class="carddesc">short description of what the code does</p>
+                </div>
+                <div>
+                    <code class="cardsnippet">.row {
+                        display: flex;
+                        flex-direction: row;
+                        flex-wrap: wrap;
+                      }</code>
+                </div>
+                <div>
+                    <p class="cardlang">Language</p>
+                </div>
+            </article>
+        </section>
