--- a/templates/login.css
+++ b/templates/login.css
@@ -56,3 +56,64 @@ width: 100vw
     border-radius: 4px;
     margin: 20px;
 }
+.bigcard {
+    margin: 20px 50px 20px 50px;
+    border-radius: 5px;
+    border: 5px solid #475d5b;
+    height: fit-content;
+    padding-bottom: 15px;
+  }
+  .cardheader {
+    background-color: #719FB0;
+    color: #351F39;
+    margin: 0;
+    padding: 10px;
+  }
+  .cardinput {
+    display: flex;
+    flex-flow: column nowrap;
+  }
+  .inputdiv {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 15px;
+  }
+  label {
+    font-size: x-large;
+    font-weight: 500;
+    width: 95%;
+    margin: 15px 30px 0 40px;
+  }
+  form label {
+    font-size: x-large;
+    font-weight: 500;
+    width: 95%;
+    margin: 15px 30px 0 40px;
+  }
+  input {
+    align-self: center;
+    height: 30px;
+    width: 95%;
+  }
+  #submitbtn {
+  align-self: center;
+  justify-self: center;
+  background-color: #A0C1B8;
+  color: #726A95;
+  font-size: large;
+  height: 36px;
+  width: 95%;
+  border-radius: 5px;
+  margin: 36px 0 10px 0;
+}
+#submitbtn[type="submit"]:hover {
+  cursor: pointer;
+}
+#submitbtn[type="submit"]:active {
+  background-color: #ffa8ba;
+  border: inset;
+}
+.loginswitch{
+  color: #719FB0;
+  margin-left: 20px;
+}
