--- a/templates/signup.html
+++ b/templates/signup.html
@@ -25,10 +25,9 @@
         </nav>
 </header>
 <body>
-    <div class="bodydisplay">
       <form class="bigcard login-form">
         <div>
-          <h2 class="cardheader">Login</h2>
+          <h2 class="cardheader">Signup</h2>
         </div>
         <div class="cardinput">
           <div class="inputdiv">
@@ -39,10 +38,9 @@
             <label for="password">Password</label>
             <input id="password-login" type="password" placeholder="Password" />
           </div>
-          <button type="submit" id="submitbtn">Login</button>
+          <button type="submit" id="submitbtn">Signup</button>
         </div>
         <div class="commentdata">
-          <a href="/signup" class="loginswitch">Signup instead?</a></div>
+          <a href="/login" class="loginswitch">Login instead?</a></div>
       </form>
-    </div>
 </body>
