--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,17 +1,317 @@
 body {
-  font-family: 'Rubik', sans-serif;
+  background-color: #351F39;
+  color: #719FB0;
+  margin: 0
+}
+header {
+  display: flex;
+flex-flow: column nowrap;
+align-content: flex-start;
+background: linear-gradient(160deg, #719FB0 60%, #A0C1B8);
+border-bottom: 5px #719FB0 ridge;
+color: #351F39;
+margin: 0;
+width: 100vw;
+}
+header a{
+  text-decoration: none;
+  color:#351F39;
+}
+#apptitle {
+  color: #A0C1B8;
+  background-color: #726A95;
+  width: fit-content;
+  padding: 10px;
+  border-radius: 4px;
+  margin: 20px;
+}
+.navbtn {
+  margin: 10px;
+  width: fit-content;
+}
+#navbar {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  justify-items: flex-start;
+  align-content: center;
+  margin: 10px 20px 20px 20px;
+}
+#search{
+  gap: 8px;
+  margin:auto;
+ display: flex;
+ flex-flow: row nowrap;
+}
+#search label{
+  font-weight: 600;
+  margin: auto;
+}
+#searchbar{
+  margin:auto;
+}
+#newsnippetbtn {
+  background-color: #726A95;
+  border-radius: 3px;
+  border: ridge 3px #351F39;
+  color:#A0C1B8;
+  width: 60px;
+  margin: auto 20px auto 10px;
+  align-self: flex-end;
+}
+.inputdiv label {
+  margin: 10px 10px 0 10px;
+}
+#bodyinput {
+  align-self: center;
+  height: 30vh;
+  width: 95%;
+}
+#descinput {
+  align-self: center;
+  height: 40px;
+  width: 95%;
+}
+.bigcard {
+  margin: 20px 50px 20px 50px;
+  border-radius: 5px;
+  border: 5px solid #475d5b;
+  height: fit-content;
+  padding-bottom: 15px;
+}
+.cardheader {
+  background-color: #719FB0;
+  color: #351F39;
+  margin: 0;
+  padding: 10px;
+}
+.cardinput {
+  display: flex;
+  flex-flow: column nowrap;
+}
+.inputdiv {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 15px;
+}
+label {
+  font-size: x-large;
+  font-weight: 500;
+  width: 95%;
+  margin: 15px 30px 0 40px;
+}
+form label {
+  font-size: x-large;
+  font-weight: 500;
+  width: 95%;
+  margin: 15px 30px 0 40px;
+}
+input {
+  align-self: center;
+  height: 30px;
+  width: 95%;
+}
+#submitbtn {
+align-self: center;
+justify-self: center;
+background-color: #A0C1B8;
+color: #726A95;
+font-size: large;
+height: 36px;
+width: 95%;
+border-radius: 5px;
+margin: 36px 0 10px 0;
+}
+#submitbtn[type="submit"]:hover {
+cursor: pointer;
+}
+#submitbtn[type="submit"]:active {
+background-color: #ffa8ba;
+border: inset;
+}
+.loginswitch{
+color: #719FB0;
+margin-left: 20px;
+}
+.dashheader {
+  background-color: #726A95;
+  color: #A0C1B8;
+  margin: 0;
+  padding: 10px;
+}
+.profileheader {
+  margin: 20px;
+  padding: 15px;
+  display: flex;
+  flex-flow: column nowrap;
+  align-content: center;
+  align-items: center;
+  background-color: #719FB0;
+  color:#351F39;}
+.profileheader h2{
+  margin: 5px;
+}
+.carddisplay {
+  display: flex;
+  flex-flow: column nowrap;
+  align-content: space-around;
+  justify-content: center;
+  gap: 25px;
+  margin: 20px
+}
+.card {
+  border-radius: 3px;
+  border: solid 3px #719FB0;
+  min-width: fit-content;
+  padding: 0;
+
+}
+.cardheader {
+  margin: 0;
+  padding: 0 15px 0 15px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  background-color: #719FB0;
+  color:#351F39;
+  box-shadow: 2px -2px #719FB0, -2px -2px #719FB0, 2px 0  #719FB0;
+}
+.cardheader div{
+  display: flex;
+  flex-flow: column nowrap;
+  align-content: center;
+  justify-content: center;
+}
+.carduser, .carddate{
+  margin: 0;
+}
+.carddesc{
+  margin: 15px;
+}
+.cardsnippet{
+  margin: 10px 10px 10px 10px;
+  width: auto;
+  padding: 8px 8px 8px 18px;
+  display:block;
+  white-space:pre-line;
+  border-radius: 3px;
+  background-color: #A0C1B8;
+  color:#351F39;
+  text-justify: center;
+  text-align: left;
+}
+.cardlang {
+  border-top: solid 2px #719FB0;
+  text-align: center;
+  margin: 20px 0 8px 0;
+  padding: 8px 0 4px 0;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Rubik Mono One', sans-serif;
+.snippettitle{
+    font-size: x-large;
+    margin: 20px 60px 10px 40px;
+    padding-bottom: 20px;
+    border-bottom: solid 2px #719FB0;
+}
+.snippetdesc{
+    margin-left: 60px;
+    font-size: large;
+}
+.snippetbody{
+    margin: 20px 60px 30px 60px;
+    background-color: black;
+    color: green;
+display:block;
+white-space: break-spaces;
+border-radius: 5px;
+border: groove white 3px;
+}
+.snippetdata{
+    border-top: solid 2px #719FB0;
+    margin: 20px 60px 20px 60px;
+}
+.snippettags{
+    display: flex;
+    flex-flow: row wrap;
+}
+.tag{
+    background-color: black;
+    color:#726A95;
+    width: fit-content;
+    padding: 5px;
+    border-radius: 3px;
+    border: solid 2px #726A95;
+    margin: 5px;
+    list-style: none;
 }
 
-.small {
-  font-weight: 300;
-  font-style: italic;
+.commentsection{
+    margin: 10px 60px 20px 60px;
 }
+.commentcard {
+    border: 2px solid #475d5b;
+    border-radius: 5px;
+    height: fit-content;
+    margin: 15px 5px 15px 5px;
+    display: flex;
+    flex-flow: column nowrap;
+    width: 60%;
+    position: relative;
+    left: 30px;
+  }
+  .commenthead {
+    display: flex;
+    flex-flow: row nowrap;
+    align-content: flex-start;
+    justify-content: space-between;
+    height: 10px;
+    width: 100%;
+    background-color: #A0C1B8;
+  }
+  .commenthead * {
+    margin: 5px 10px 5px 10px;
+  }
+  
+  .commentbody {
+    align-self: center;
+    width: 95%;
+    font-size: large;
+    font-weight: 500;
+    margin: 5px 30px 0 10px;
+    display: flex;
+    flex-flow: column nowrap;
+  }
+  .commentcontent {
+    font-size: large;
+    font-weight: 400;
+    margin: 5px 5px 5px 15px;
+  }
+  .commentinput {
+    width: 95%;
+    height: fit-content;
+    align-self: center;
+    justify-self: center;
+  }
+  .commentdata a:hover {
+    cursor: pointer;
+  }
+  .commentdata a a:link {
+    color: #f2f7f5;
+  }
+  .commentdata a a:active {
+    color: #fa5246;
+  }
+  .commentdata a a:visited {
+    color: #ffa8ba;
+  }
+  .commentdata {
+    color: #91aba9;
+    font-size: small;
+    margin-left: 30px;
+  }
+  .commentdata a {
+    font-size: medium;
+    font-weight: 400;
+  }
